objects/Account.object
<CustomObject>
    <fields>
        <fullName>AQB_WMU_300__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Top WMU Prospects</inlineHelpText>
        <label>WMU 300</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Historic_Permit_Numbers__c</fullName>
        <description>AQ_Custom</description>
        <inlineHelpText>Indicates the historic permits numbers associated with this account.</inlineHelpText>
        <label>Historic Permit Numbers</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Legacy_ID__c</fullName>
        <description>AQ_Custom</description>
        <inlineHelpText>Legacy ID for this Account.</inlineHelpText>
        <label>Legacy ID</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Millennium_Id__c</fullName>
        <description>AQB Custom</description>
        <label>Millennium Id</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Not_a_MG_Prospect__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>AQ_Custom Not a MG Prospect at this time</inlineHelpText>
        <label>Not a MG Prospect</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Parking_Permit_Issue_Date__c</fullName>
        <description>AQ_Custom</description>
        <inlineHelpText>Indicates the date the permit was issued.</inlineHelpText>
        <label>Parking Permit Issue Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Parking_Permit_Number__c</fullName>
        <description>AQ_Custom</description>
        <inlineHelpText>Indicates the current parking permit number.</inlineHelpText>
        <label>Parking Permit Number</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phone_Restrictions__c</fullName>
        <description>AQB WMU</description>
        <label>Phone Restrictions</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No Contact By Phone</fullName>
                </value>
                <value>
                    <fullName>No Gary Fund Phone Solicitation</fullName>
                </value>
                <value>
                    <fullName>No longer valid phone number</fullName>
                </value>
                <value>
                    <fullName>No Phone Solicitation</fullName>
                </value>
                <value>
                    <fullName>PTF Only</fullName>
                </value>
                <value>
                    <fullName>Unlisted Phone Number</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Year__c</fullName>
        <inlineHelpText>The Preferred Year of all Contacts associated with the Affiliated Organization</inlineHelpText>
        <label>Year</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <sharingModel>ReadWrite</sharingModel>
    <listViews>
        <fullName>AllAccounts</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.FIRST_NAME</columns>
        <columns>CORE.USERS.LAST_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>AQB__AccountType__c</field>
            <operation>equals</operation>
            <value>Club,Giving Society</value>
        </filters>
        <label>All Accounts</label>
    </listViews>
    <listViews>
        <fullName>MyAccounts</fullName>
        <filterScope>Mine</filterScope>
        <label>My Accounts</label>
    </listViews>
    <validationRules>
        <fullName>Communication_Choice</fullName>
        <active>false</active>
        <description>Don't allow Account to be created without some type of communication mode (email or phone or address).</description>
        <errorConditionFormula>OR( ISBLANK(AQB__Email__c ),  ISBLANK(Phone),  ISBLANK(AQB__AccountMailingStreetLineOne__c))</errorConditionFormula>
        <errorMessage>Please enter a type of Communication: Home Address, Phone Number, or Email.</errorMessage>
    </validationRules>
</CustomObject>